fix logo flickering bug

--- a/frontend/src/components/logo/Logo.css
+++ b/frontend/src/components/logo/Logo.css
@@ -16,21 +16,18 @@
 .svg {
     width: 120px;
     height: 120px;
-    position: fixed;
+    position: absolute;
     top: 25px;
     left: -530px;
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: all 0.5s ease;
     z-index: 1000;
 }
 
 .svg:hover {
     z-index: 1000;
     color: inherit;
-    transition: all 0.5s ease;
-    width: 120px;
 }
 
 @media (max-width: 640px) {
